Identify the reasons why the test case failed